[gd_scene load_steps=3 format=2]

[ext_resource path="res://something/room_something.gd" type="Script" id=1]
[ext_resource path="res://something/peerson.tscn" type="PackedScene" id=2]

[node name="room_something" type="Node2D"]
script = ExtResource( 1 )

[node name="text0" parent="." instance=ExtResource( 2 )]
position = Vector2( -21, -10 )
words = "H-Hey!"
speed = 5.0

[node name="text1" parent="." instance=ExtResource( 2 )]
position = Vector2( -29, -10 )
words = "Um- Hello!"
speed = 5.0

[node name="text2" parent="." instance=ExtResource( 2 )]
position = Vector2( -65, -17 )
words = "Sorry... uh... you don't
really know me."
speed = 5.0

[node name="text3" parent="." instance=ExtResource( 2 )]
position = Vector2( -76, -15 )
words = "...and honestly I don't really
know you either..."
speed = 5.0

[node name="text4" parent="." instance=ExtResource( 2 )]
position = Vector2( -71, -10 )
words = "But I wanted to say hello!"
speed = 5.0

[node name="text5" parent="." instance=ExtResource( 2 )]
position = Vector2( -4, -9 )
words = "..."
speed = 5.0

[node name="text6" parent="." instance=ExtResource( 2 )]
position = Vector2( -71, -23 )
words = "Look... I don't know where
THIS is, but I wanna
see you again."
speed = 5.0

[node name="text7" parent="." instance=ExtResource( 2 )]
position = Vector2( -82, -25 )
words = "Something's coming this year...
And I might be able
to see you there!"
speed = 5.0

[node name="text8" parent="." instance=ExtResource( 2 )]
position = Vector2( -56, -20 )
words = "Don't forget, alright!
This year, 2022."
speed = 5.0

[node name="text9" parent="." instance=ExtResource( 2 )]
position = Vector2( -19, -12 )
words = "See ya!"
speed = 5.0
